<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dynamix Context Framework </string>
    <string name="showDisconnected">Show Disconnected Applications</string>
    <string name="Version">0.1</string>
    <string name="home_no_apps">Waiting for applications to connect...</string>
    <string name="app_list_label">Authorized Applications</string>
    <string name="app_contextmenu_remove">Remove Application</string>
    <string name="app_settings">Application Settings</string>
    <string name="save_app_authorization">Save Settings</string>
    <string name="plug_list_label">Installed Context Plugins</string>
    <string name="app_list_contextmenu_title">Application Options</string>
    <string name="plug_contextmenu_remove">Uninstall Context Plugin</string>
    <string name="plug_list_context_menu_title">Context Plugin Options</string>
    <string name="plug_details_label">Context Plugin Details</string>
    <string name="plug_description_label">Description</string>
    <string name="plug_fidelity_label">Supported Context Information</string>
    <string name="dynamix_enable_toggle_on">Dynamix Enabled</string>
    <string name="dynamix_enable_toggle_off">Dynamix Disabled</string>
    <string name="plugin_enable_toggle_on">Plugin Enabled</string>
    <string name="plugin_enable_toggle_off">Plugin Disabled</string>
    <string name="btn_plugin_uninstall">Uninstall Plugin</string>
    <string name="app_settings_label">Application Settings</string>
    <string name="app_description_label">Description</string>
    <string name="plugin_settings_label">Plug-in Privacy Settings</string>
    <string name="btn_uninstall_app">Uninstall Application</string>
    <string name="app_contextmenu_block">Block/Unblock Application</string>
    <string name="app_privacy_policy_label">Privacy Policy</string>
    <string name="app_settings_contextmenu_fidelity">Set Custom Trust Level</string>
    <string name="btn_add_new_privacy_policy">Add New Privacy Policy</string>
    <string name="privacy_policy_list_label">Available Privacy Policies</string>
    <string name="privacy_policy_description_label">Description</string>
    <string name="privacy_policy_click_me">Tap to view details...</string>
    <string name="enable_disable_label">Enable/Disable</string>
    <string name="pending_app_list_label">Pending Applications</string>
    <string name="app_pending_message">Tap to setup application privacy...</string>
    <string name="btn_update_scan">Find Updates</string>
    <string name="dynamix_notification_titlebar">Dynamix Message</string>
    <string name="dynamix_notification_title">Dynamix Context Framework</string>
    <string name="pending_app_notification">Application(s) awaiting authorization</string>
    <string name="btn_finished_app_edit">Save Settings</string>
    <string name="btn_finished_app_pending">Authorize Application</string>
    <string name="dynamix_settings_label">Dynamix Settings</string>
    <string name="updates_list_label">Available Updates</string>
    <string name="btn_do_updates">Install Updates</string>
    <string name="btn_configure_context_plugin">Configure Plugin</string>
    <string name="pref_audible_alerts_title">Audible Alerts</string>
    <string name="plug_stats_label">Most recent events</string>
    <string name="plug_stats_summary_label">Plug-in Statistics</string>
    <string name="btn_see_plugin_stats">View Statistics</string>
    <string name="btn_find_plugs">Find Plug-ins</string>
    <string name="btn_install_plugs">Install Plug-ins</string>
    <string name="btn_see_plugin_details">View Plug-in Details</string>
    <string name="update_description_label">Update Description</string>
    <string name="update_priority_label">Update Priority</string>
    <string name="update_target_label">Version Information</string>
    <string name="context_plugin_updates_available">Context Plug-in Update(s) Available</string>
    <string name="privacy_policy_summary"></string>
    <string name="custom_policy_summary">Tap and hold any Context Plug-in below to set a custom trust level, or tap it to view its description.</string>
    <string name="custom_privacy_settings_label">Custom Privacy Settings</string>
    <string name="cancel_install_label">Cancel Installation</string>
    <string name="cancel_update_label">Cancel Update</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>

</resources>