<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="?android:attr/listPreferredItemHeight"
	    android:padding="6dip"
	    android:background="#333333" 
	    android:layout_margin="2dip">
	    <ImageView
	        android:id="@+id/icon"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_marginRight="6dip"
	        android:src="@drawable/icon" />
	    <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="0dip"
	        android:layout_weight="1"
	        android:layout_height="fill_parent">
	        <TextView
	            android:id="@+id/plug_name"
	            android:layout_width="fill_parent"
	            android:layout_height="0dip"
	            android:layout_weight="1"
	            android:gravity="center_vertical"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	        />
	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="0dip"
	            android:layout_weight="1"
	            android:id="@+id/plug_status"
	            android:singleLine="false"
	            android:ellipsize="marquee"         
	        />
	    </LinearLayout>
	</LinearLayout>	
			
	<RelativeLayout
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="6dip"
        android:layout_marginBottom="6dip"
        android:layout_weight="1"
        >
                
		<TextView android:text="@string/plug_description_label" 
					android:id="@+id/plug_description_label" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:editable="false" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					/>	

		<TextView 
			android:id="@+id/plug_description" 
			android:layout_width="fill_parent" 				
			android:layout_height="wrap_content"
			android:editable="false"
			android:scrollbars="vertical"
  			android:textColor="@android:color/secondary_text_dark_nodisable"
  			android:fadingEdge="vertical" 
  			android:layout_below="@+id/plug_description_label"
  			android:layout_weight="1"	
  			android:maxLines="3" 					
			/>	

			
					
		<TextView android:text="@string/plug_fidelity_label" 
					android:id="@+id/plug_fidelity_label" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:editable="false" 
					android:layout_marginTop="6dip"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_below="@+id/plug_description"
					/>
		<ListView android:layout_width="fill_parent"
			android:id="@+id/fidelityList"
			android:layout_height="fill_parent"
			android:layout_below="@+id/plug_fidelity_label"
			android:layout_weight="1"		
			/>
	</RelativeLayout>
		                          
	<LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"	
		>
      		      		       	
       	<Button android:layout_width="fill_parent"
			android:text="@string/btn_see_plugin_stats"
			android:layout_height="wrap_content"
			android:id="@+id/btn_see_plugin_stats"
       		android:layout_gravity="bottom"
       		android:layout_weight="1"
       		/>
       		
       	<Button android:layout_width="fill_parent"
			android:text="@string/btn_configure_context_plugin"
			android:layout_height="wrap_content"
			android:id="@+id/btn_configure_context_plugin"
       		android:layout_gravity="bottom"
       		android:layout_weight="1"
       		/>
        		
	</LinearLayout> 						 
</LinearLayout>