<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   >		
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="?android:attr/listPreferredItemHeight"
	    android:padding="6dip"
	    android:background="#333333" 
	    android:layout_margin="2dip">
	    <ImageView
	        android:id="@+id/icon"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_marginRight="6dip"
	        android:src="@drawable/icon" />
	    <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="0dip"
	        android:layout_weight="1"
	        android:layout_height="fill_parent">
	        <TextView
	            android:id="@+id/app_edit_name"
	            android:layout_width="fill_parent"
	            android:layout_height="0dip"
	            android:layout_weight="1"
	            android:gravity="center_vertical"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:ellipsize="marquee"
            	android:fadingEdge="horizontal" 
	        />
	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="0dip"
	            android:layout_weight="1"
	            android:id="@+id/app_edit_status"
	            android:singleLine="true"
	            android:ellipsize="marquee"    
            	android:fadingEdge="horizontal"      
	        />
	    </LinearLayout>
	</LinearLayout>	

				
	<TextView android:text="@string/app_privacy_policy_label" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:editable="false" 
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_marginTop="6dip"
				/>	
				
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="?android:attr/listPreferredItemHeight"
	    android:paddingTop="6dip"
	    android:paddingBottom="6dip"
	    android:layout_margin="2dip">
	   
	    <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="0dip"
	        android:layout_weight="1"
	        android:layout_height="fill_parent">
	        <Spinner
	            android:id="@+id/privacy_policy_spinner"
	            android:layout_width="fill_parent"
	            android:layout_height="0dip"
	            android:layout_weight="1"
	            android:gravity="center_vertical"
	        />
	      
	    </LinearLayout>
	     <ImageView
	        android:id="@+id/privacy_icon"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:paddingLeft="2dip"
		    android:paddingRight="12dip"
	        android:src="@drawable/icon" />

	</LinearLayout>
	

		<TextView android:id="@+id/privacy_policy_description"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:editable="false"
				android:layout_marginLeft="8dip"
				android:layout_marginBottom="5dip"
				android:layout_marginTop="-8dip"
				/>	
				

		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="?android:attr/listDivider"
	    />
		
		<TextView android:text="@string/custom_privacy_settings_label" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:editable="false" 
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_marginTop="6dip"
					/>	    
		   <TextView android:text="@string/custom_policy_summary"  
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content" 
						android:editable="false"
						android:layout_marginBottom="2dip"
						/>	
					
	<ListView android:layout_width="fill_parent"
	              android:id="@+id/plug_settings_list"
	              android:layout_height="wrap_content"
	              android:layout_weight="1"/>

		
	<LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		
			<Button android:id="@+id/btn_finished_app_edit" 
				android:text="@string/btn_finished_app_edit" 				
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"/>
	</LinearLayout>	 
</LinearLayout>